--- a/settings.env
+++ b/settings.env
@@ -1,3 +1,3 @@
 DISCORD_API_KEY=MTA2NTAyNDA0NjQ1NjEzMTcwOA.GREH1s.2pYryE7ipg-E-jNYv1dsLZa1vGWXGvsISKTvfA
-ALLOWED_GUILDS=971268468148166697
+ALLOWED_GUILDS="971268468148166697"
 SQLITE_DATABASE=amazon.db
